# ros2-robot-simulation-stage

./: README.md  convert_meshes.py  fk_results.txt  ik_results.txt  setup.sh
Solidworks/: Base.SLDPRT  Base.ipt  Grid.ipt  Lid.ipt  Proto-1 v4.iam  Proto-1 v4.step  frontal part2.step  prototest.iam
mon_robot_bringup/: CMakeLists.txt  package.xml
mon_robot_bringup/config/: controllers.yaml
mon_robot_bringup/launch/: display.launch.py  simulation.launch.py  test_display.launch.py
mon_robot_bringup/resource/: mon_robot_bringup
mon_robot_bringup/worlds/: robot_world.sdf
mon_robot_control/: CMakeLists.txt  package.xml  setup.py
mon_robot_control/resource/: mon_robot_control
mon_robot_control/scripts/: fk_validation.py  ik_validation.py  send_trajectory.py  validate_fk.py  validate_kinematics.py  workspace_visualization.py
mon_robot_description/: CMakeLists.txt  package.xml
mon_robot_description/meshes/: ATAWI_3A3 Prototype - Body-1.STL  ATAWI_3A3 Prototype - HEXNUT-1.STL  ATAWI_3A3 Prototype - HEXNUT-2.STL  ATAWI_3A3 Prototype - Handle-1.STL  ATAWI_3A3 Prototype - Handle-2.STL  ATAWI_3A3 Prototype - Impeller blade-1.STL  ATAWI_3A3 Prototype - Impeller blade-2.STL  ATAWI_3A3 Prototype - Impeller blade-3.STL  ATAWI_3A3 Prototype - Impeller blade-4.STL  ATAWI_3A3 Prototype - L2-1.STL  ATAWI_3A3 Prototype - L2-2.STL  ATAWI_3A3 Prototype - L2-3.STL  ATAWI_3A3 Prototype - L2-4.STL  ATAWI_3A3 Prototype - VIS-1.STL  ATAWI_3A3 Prototype - VIS-2.STL  ATAWI_3A3 Prototype - part2-1.STL  Grid.stl  frontal_part2.stl
mon_robot_description/resource/: mon_robot_description
mon_robot_description/rviz/: display.rviz
mon_robot_description/urdf/: mon_robot.urdf.xacro
