<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mon_robot_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and configuration for ATAWI-3A3 robot simulation</description>
  
  <maintainer email="stage@atawi.fr">ATAWI Stage</maintainer>
  <license>MIT</license>
  
  <author email="stage@atawi.fr">ATAWI Team</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>ament_cmake</build_depend>
  
  <exec_depend>mon_robot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
